REG-138 disable save btn is one of the fields is in edit mode

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_field_actions.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_field_actions.sass
@@ -4,6 +4,7 @@ div.tribe-field-actions-body
   display: flex
   border: solid #cccccc 1px
   background-color: #f0f0f0
+  z-index: 2000
   > div
     margin: 3px
     $size: 22px
