--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -3,18 +3,28 @@ div
     h1
       div(data-tribe-singleselect,
         data-disable-actions="true",
+        data-on-edit-mode-on="onEditModeOn(uniqueId)",
+        data-on-edit-mode-off="onEditModeOff(uniqueId)",
         data-available-options="[{text:'DELETE', value:'delete'}, {text:'HEAD', value:'head'}, {text:'GET', value:'get'}, {text:'OPTIONS', value:'options'}, {text:'POST', value:'post'}, {text:'PUT', value:'put'}, {text:'PATCH', value:'patch'}]",
         data-selected-option="endpoint.httpMethod")
       div(data-tribe-text,
-        data-on-edit-mode-on="onEditModeOn()",
-        data-on-edit-mode-off="onEditModeOff()",
+        data-on-edit-mode-on="onEditModeOn(uniqueId)",
+        data-on-edit-mode-off="onEditModeOff(uniqueId)",
         data-regex="{{regex}}", data-regex-tip="{{regexTip}}", data-value="endpoint.path", data-placeholder="Path")
   h2 Description
-  div(data-tribe-markdown, data-value="endpoint.operation.description")
-  div(data-app-endpoints-details-see, data-endpoint="endpoint")
+  div(data-tribe-markdown,
+    data-on-edit-mode-on="onEditModeOn(uniqueId)",
+    data-on-edit-mode-off="onEditModeOff(uniqueId)",
+    data-value="endpoint.operation.description")
+  div(data-app-endpoints-details-see, data-endpoint="endpoint",
+    data-on-edit-mode-on="onEditModeOn(uniqueId)",
+    data-on-edit-mode-off="onEditModeOff(uniqueId)")
   .resourceUrl(x-ng-if="resourceUrl")
     h2(app-endpoints-details-toc-anchor="Resource URL") Resource URL
     div
-      i(data-tribe-editable-option, data-value="endpoint.endpointProtocol", data-options="['http', 'https']")
+      i(data-tribe-editable-option,
+        data-on-edit-mode-on="onEditModeOn(uniqueId)",
+        data-on-edit-mode-off="onEditModeOff(uniqueId)",
+        data-value="endpoint.endpointProtocol", data-options="['http', 'https']")
       span ://
       a(x-ng-href="{{ endpoint.endpointProtocol + '://' + resourceUrl}}") {{resourceUrl}}
