--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_parameters.jade
@@ -19,31 +19,45 @@ div
           tr(x-ng-repeat="param in endpoint.operation.parameters | orderBy:'param.name'")
             td
               div(data-tribe-singleselect,
+                data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                data-on-edit-mode-off="onEditModeOff(uniqueId)",
                 data-editable="true",
                 data-selected-option="param.name",
                 data-placeholder="",
                 data-available-options="['Authorization', 'Date', 'Content-Type', 'Accept']")
             td
               div(data-tribe-singleselect,
+                data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                data-on-edit-mode-off="onEditModeOff(uniqueId)",
                 data-selected-option="param.type",
                 data-placeholder="",
                 data-available-options="['integer', 'long', 'float', 'double', 'string', 'byte', 'binary', 'boolean', 'date', 'dateTime', 'password']")
             td
               div(data-tribe-singleselect,
+                  data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                  data-on-edit-mode-off="onEditModeOff(uniqueId)",
                   data-selected-option="param.in",
                   data-placeholder="",
                   data-available-options="[{text:'Query', value:'query'}, {text:'Header', value:'header'}, {text:'Path', value:'path'}, {text:'Form data', value:'formData'}, {text:'Body', value:'body'}]")
             td
               div(data-tribe-singleselect,
+                  data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                  data-on-edit-mode-off="onEditModeOff(uniqueId)",
                   data-selected-option="param.required",
                   data-placeholder="No",
                   data-available-options="[{text: 'Yes', value: true}, {text: 'No', value: false}]")
             td.description
               div
-                div(data-tribe-markdown, data-value="param.description")
+                div(data-tribe-markdown,
+                  data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                  data-on-edit-mode-off="onEditModeOff(uniqueId)",
+                  data-value="param.description")
             td.valid-values
               div
-                div(data-tribe-markdown, data-value="param['x-tribestream-api-registry']['valid-values']")
+                div(data-tribe-markdown,
+                  data-on-edit-mode-on="onEditModeOn(uniqueId)",
+                  data-on-edit-mode-off="onEditModeOff(uniqueId)",
+                  data-value="param['x-tribestream-api-registry']['valid-values']")
             td
               div
                 i.fa.fa-trash-o(x-ng-click="removeParam(param);")
