--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -7,7 +7,8 @@ div
         i.fa.fa-chevron-right
         a(x-ng-href="application/{{applicationName}}?version={{swagger.info.version}}") {{swagger.info.title}} {{swagger.info.version}}
       .buttons
-        .save(x-ng-click="save()")
+        .save(x-ng-disabled="!swagger.info.title || !swagger.info.version",
+                 x-ng-click="!swagger.info.title || !swagger.info.version || save()")
           i.fa.fa-floppy-o
           span Save
         .create-endpoint(x-ng-if="endpointsLink")
