--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -7,7 +7,7 @@ div
         data-selected-option="endpoint.httpMethod")
       div(data-tribe-text, data-value="endpoint.path", data-placeholder="Path")
   h2 Description
-  div(data-tribe-markdown, data-value="endpoint.operation.description")
+  div(data-tribe-markdown, data-value="endpoint.operation.description", data-placeholder="Description")
   div(data-app-endpoints-details-see, data-endpoint="endpoint")
   .resourceUrl(x-ng-if="resourceUrl")
     h2(app-endpoints-details-toc-anchor="Resource URL") Resource URL
