--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
@@ -47,13 +47,15 @@ div[data-app-application-details]
           cursor: pointer
   article.content
     padding: 10px 40px 0 40px
+    div[data-tribe-markdown]
+      width: 100%
     > div:first-of-type
       > h1
         transform: translate(-10px, 0)
       > div
         transform: translate(-10px, 0)
     h1
-      margin: 0
+      margin: 0 0 5px 0
     h2, h3
       text-transform: uppercase
       margin: 15px 0
