REG-138 add placeholder back. removed when resolving last conflict

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_header.jade
@@ -15,7 +15,7 @@ div
   div(data-tribe-markdown,
     data-on-edit-mode-on="onEditModeOn(uniqueId)",
     data-on-edit-mode-off="onEditModeOff(uniqueId)",
-    data-value="endpoint.operation.description")
+    data-value="endpoint.operation.description", data-placeholder="Description")
   div(data-app-endpoints-details-see, data-endpoint="endpoint",
     data-on-edit-mode-on="onEditModeOn(uniqueId)",
     data-on-edit-mode-off="onEditModeOff(uniqueId)")
