--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_history.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_history.sass
@@ -29,3 +29,8 @@ div[data-app-endpoints-details-history]
         color: $color
       &:hover
         background-color: #f0f0f0 !important
+  h3.diff-title
+    margin: 0
+    padding: 5px 8px
+    text-align: center
+    font-size: 12px
