REG-362 Stabilize the Version field while editing

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
@@ -56,6 +56,7 @@ div[data-app-application-details]
       width: 100%
     > div:first-of-type
       > h1
+        display: flex
         transform: translate(-10px, 0)
       > div
         transform: translate(-10px, 0)
