REG-92 Make tables have a light line to separate the rows so it is more readable

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_common.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_common.sass
@@ -5,7 +5,7 @@ $app-max-width: 100%
 
 @mixin table-row-highlight($color)
   tr
-    border-top: dashed $color 1px
+    border-top: solid $color 1px
     &:first-of-type
       border-color: transparent
     > td
