--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_common_table.sass
@@ -26,6 +26,6 @@
       padding-top: 5px
     tr
       $color: #f2f4f5
-      border-top: dashed $color 1px
+      border-top: solid $color 1px
       &:last-of-type
-        border-bottom: dashed $color 1px
+        border-bottom: solid $color 1px
