--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_number.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_number.jade
@@ -1,4 +1,5 @@
 div(tabindex=0)
+  span.empty(x-ng-if="!value") {{placeholder ? placeholder : Empty}}
   span {{value && value.trim() !== '' ? value : '&nbsp;&nbsp;&nbsp;'}}
   input(type="number", x-ng-model="value", min="0")
   div
