--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_list.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_list.sass
@@ -23,6 +23,14 @@ div[data-app-endpoints-list]
         padding: 20px
         border-top: dashed #cccccc 1px
         overflow: hidden
+        > h3
+          > span
+            font-size: 16px
+          > a
+            font-size: 16px
+            padding-left: 5px
+          > i.fa
+            font-size: 12px
         > i, > span
           color: #bbbbbb
         > i.fa-unlock
@@ -31,5 +39,4 @@ div[data-app-endpoints-list]
           margin-left: 10px
           &:first-child
             margin-left: 0
-
 
