--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_multiselect.sass
@@ -48,11 +48,6 @@ div[data-tribe-multiselect-selected]
             margin-right: 5px
           > i
             color: #707070
-        &.selected
-          background-color: $tomitribe-orange
-          > div
-            > span, > i
-              color: #ffffff
 
 [data-tribe-multiselect]
   display: inline-block
@@ -89,3 +84,10 @@ div.tribe-data-tribe-multiselect-available-body
     > span:first-of-type
       font-weight: 800
       margin-right: 5px
+
+[data-tribe-multiselect].active
+  div.items.selected
+    background-color: $tomitribe-orange
+    > div
+      > span, > i
+        color: #ffffff
