REG-298 Endpoint details page - fixed positioned header (breadcrumbs and btns)

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details.sass
@@ -17,6 +17,12 @@ div[data-app-endpoints-details]
       align-items: center
       flex-wrap: wrap
       justify-content: space-between
+      &.fixed-header
+        background-color: #ffffff
+        position: fixed
+        top: 0
+        width: 100%
+        z-index: 1
       div.breadcrumb
         > *
           margin: 0 10px 0 0
