REG-347 set fixed width for the input field, remove border from editable-text.

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_resource_information.sass
@@ -51,7 +51,7 @@ div[data-app-endpoints-details-resource-information]
         div.tribe-add-btn
           opacity: 1
       i[data-tribe-editable-text], i[data-tribe-editable-number], i[data-tribe-editable-option]
-        > div
+        > div:hover
           border-color: #f2f0f0
       > div.rates
         display: flex
