--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_number.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_number.jade
@@ -1,6 +1,5 @@
 div(tabindex=0)
-  span.empty(x-ng-if="!value") {{placeholder ? placeholder : Empty}}
-  span {{value && value.trim() !== '' ? value : '&nbsp;&nbsp;&nbsp;'}}
+  span(x-ng-class="{empty:!value}") {{value ? value : placeholder}}
   input(type="number", x-ng-model="value", min="0")
   div
     i.fa.fa-caret-up
