--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_list.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_list.sass
@@ -31,10 +31,11 @@ div[data-app-endpoints-list]
             padding-left: 5px
           > i.fa
             font-size: 12px
-        > i, > span
-          color: #bbbbbb
-        > i.fa-unlock
-          color: $color
+          > i.fa-unlock
+            color: $color
+          > i, > span
+            color: #bbbbbb
+            padding-left: 10px
         > *
           margin-left: 10px
           &:first-child
