REG-297 Application details page - fixed positioned header (breadcrumbs and btns)

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
@@ -7,6 +7,12 @@ div[data-app-application-details]
     display: flex
     justify-content: space-between
     align-items: center
+    &.fixed-header
+      background-color: #ffffff
+      position: fixed
+      top: 0
+      width: 100%
+      z-index: 1
     .breadcrumb
       *
         margin: 0 10px 0 0
