--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -1,5 +1,5 @@
 div
-  .header(set-class-when-at-top)
+  .header(set-class-when-at-top-endpoint)
     .breadcrumb
       a(href=".")
         i.fa.fa-home
