REG-297 Change directory name to setClassOnScroll

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -1,6 +1,6 @@
 div
   div
-    .header(set-class-when-at-top)
+    .header(set-class-on-scroll)
       .breadcrumb
         a(href=".")
           i.fa.fa-home
