REG-372 Fix the position of the Markdown edit bar

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -58,6 +58,7 @@ div[data-tribe-markdown]
   display: inline-block
   div.CodeMirror, div.CodeMirror-scroll
     min-height: 30px
+    max-height: 300px
   div.edit-icon
     opacity: 0
     display: flex
