--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown_help.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_markdown_help.jade
@@ -1,59 +1,64 @@
 div
-    .markdown-help-content
-        div
-            :markdown-it
-                # Markdown Guide
-                ## Emphasis
-                ```
-                **bold**
-                *italics*
-                ~~strikethrough~~
-                ```
-                ## Headers
-                ```
-                # Big header
-                ## Medium header
-                ### Small header
-                #### Tiny header
-                ```
-                ## Lists
-                ```
-                    * Generic list item
-                    * Generic list item
-                    * Generic list item
-                    1. Numbered list item
-                    2. Numbered list item
-                    3. Numbered list item
-                ```
-                ## Links
-                ```
-                    [Text to display](http://www.example.com)
-                ```
-                ## Quotes
-                ```
-                    > This is a quote.
-                    > It can span multiple lines!
-                ```
-                ## Images  
-                ```
-                    ![](http://www.example.com/image.jpg)
-                ```
-                ## Tables
-                ```
-                    | Column 1 | Column 2 | Column 3 |
-                    | -------- | -------- | -------- |
-                    | John     | Doe      | Male     |
-                    | Mary     | Smith    | Female
-                    | Column 1 | Column 2 | Column 3 |
-                    | -------- | -------- | -------- |
-                    | John | Doe | Male |
-                    | Mary | Smith | Female
-                ```
-                ## Displaying code
-                ```
-                    \`var example = "hello!";\`
-                    \```
-                    var example = "hello!";
-                    alert(example);
-                    \```
-                ```
+    .markdown-help-wrapper.fixed-stretch
+        .markdown-help-content.fixed-stretch
+            div.markdown-help-content-header
+                h4.markdown-help-title Markdown help
+            div.markdown-help-content-body
+                :markdown-it
+                    # Markdown Guide
+                    ## Emphasis
+                    ```
+                    **bold**
+                    *italics*
+                    ~~strikethrough~~
+                    ```
+                    ## Headers
+                    ```
+                    # Big header
+                    ## Medium header
+                    ### Small header
+                    #### Tiny header
+                    ```
+                    ## Lists
+                    ```
+                        * Generic list item
+                        * Generic list item
+                        * Generic list item
+                        1. Numbered list item
+                        2. Numbered list item
+                        3. Numbered list item
+                    ```
+                    ## Links
+                    ```
+                        [Text to display](http://www.example.com)
+                    ```
+                    ## Quotes
+                    ```
+                        > This is a quote.
+                        > It can span multiple lines!
+                    ```
+                    ## Images  
+                    ```
+                        ![](http://www.example.com/image.jpg)
+                    ```
+                    ## Tables
+                    ```
+                        | Column 1 | Column 2 | Column 3 |
+                        | -------- | -------- | -------- |
+                        | John     | Doe      | Male     |
+                        | Mary     | Smith    | Female
+                        | Column 1 | Column 2 | Column 3 |
+                        | -------- | -------- | -------- |
+                        | John | Doe | Male |
+                        | Mary | Smith | Female
+                    ```
+                    ## Displaying code
+                    ```
+                        \`var example = "hello!";\`
+                        \```
+                        var example = "hello!";
+                        alert(example);
+                        \```
+                    ```
+            div.markdown-help-content-footer
+                a(href="#" ng-click="close()").close-link.pull-right Close
