--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -72,6 +72,6 @@ div
       span requests /
       i(data-tribe-editable-number, data-placeholder="Window", data-value="rl.rateWindow")
       div(data-tribe-singleselect, data-disable-actions="true", data-placeholder="Time", data-selected-option="rl.rateUnit", data-available-options="rateUnits")
-      i(data-tribe-text, data-placeholder="Description", data-value="rl.description")
+      i(data-tribe-editable-text, data-placeholder="Description", data-value="rl.description")
       div(x-ng-click="removeRate(rl)")
         i.fa.fa-trash
