--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_link.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_link.jade
@@ -6,6 +6,6 @@ div
       i.fa.fa-caret-down
   .value.floating-menu.editable-link-menu
     div
-      i(data-tribe-editable-text, data-adjust="false", data-value="href", data-empty-text="href not set")
+      i(data-tribe-editable-text, data-adjust="false", data-value="href", data-placeholder="href not set")
     div
-      i(data-tribe-editable-text, data-adjust="false", data-value="title", data-empty-text="title not set")
+      i(data-tribe-editable-text, data-adjust="false", data-value="title", data-placeholder="title not set")
