--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_text.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_editable_text.jade
@@ -1,6 +1,5 @@
 div(tabindex=0)
-  span(x-ng-if="!value || value.trim() === ''").empty {{emptyText ? emptyText : '&nbsp;&nbsp;&nbsp;'}}
-  span(x-ng-if="value && value.trim() !== ''") {{value}}
-  input(type="{{type}}", x-ng-model="value")
+  span(x-ng-class="{empty:!value}") {{value ? value : placeholder}}
+  input(type="text", x-ng-model="value")
   div
     i.fa.fa-pencil
