--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_list_application.jade
@@ -5,7 +5,7 @@ div
   div(x-ng-repeat="endpoint in application.endpoints")
     h3
       i.fa(x-ng-class="{'fa-lock': endpoint.secured, 'fa-unlock': !endpoint.secured}")
-      a(x-ng-href="endpoint/{{application.applicationName}}/{{endpoint.httpMethod}}{{endpoint.path| pathencode}}?version={{endpoint.applicationVersion}}") {{endpoint.httpMethod | uppercase}} {{endpoint.path| pathencode}}
+      a(x-ng-href="endpoint/{{application.applicationName}}/{{endpoint.httpMethod}}{{endpoint.path| pathencode}}?version={{endpoint.applicationVersion}}") {{endpoint.httpMethod | uppercase}} {{endpoint.path}}
       span {{endpoint.description | tribeHtmlText}}
   div(x-ng-if="showAll")
     span(x-ng-click="showAllEndpoints();") Show more {{application.endpoints.length - pageSize}} endpoints
