--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -82,7 +82,7 @@ div[data-app-endpoints-details-header]
         font-size: $app-font-size-h2
         color: $text-color
     span.empty
-      $color: #464748
+      $color: #a8a9aa
       color: lighten($color, 50%) !important
       font-weight: 100 !important
       font-style: italic !important
