--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -25,7 +25,7 @@ $width: 20px
       &.empty
         font-style: italic
         font-size: 12px
-        color: #d9d4d7 !important
+        color: #a8a9aa !important
     > input
       display: none
       max-width: 100%
