REG-373 + Added tooltip

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_header.jade
@@ -5,4 +5,4 @@ header
     span Tribestream API Registry
   div
     span(app-logged-in) {{user}}
-    i(app-logout).fa.fa-sign-out.fa-lg
+    i(app-logout title="Sign out").fa.fa-sign-out.fa-lg
