--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details.jade
@@ -8,8 +8,10 @@ div
       i.fa.fa-chevron-right
       span(x-ng-if="historyItem") Revision {{historyItem.revisionId}} by {{historyItem.username}} created on {{historyItem.timestamp | date:'medium'}}
     .buttons
-      .save(x-ng-disabled="isOnEdit || !endpoint.httpMethod || !endpoint.path || !endpoint.path.trim()",
-               x-ng-click="isOnEdit || !endpoint.httpMethod || !endpoint.path || !endpoint.path.trim() || save()")
+      .try-me(x-ng-disabled="!isSaveable()", x-ng-click="isSaveable() && tryMeModal()")
+        i.fa.fa-plug
+        span Try Me
+      .save(x-ng-disabled="!isSaveable()", x-ng-click="isSaveable() && save()")
         i.fa.fa-floppy-o
         span Save
       .history(x-ng-if="historyLink")
