--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_header.sass
@@ -32,9 +32,10 @@ div[data-app-header]
       flex-shrink: 0
       display: flex
       align-items: center
-      padding: 0 25px
+      padding: 0 20px
       > span, > i
         color: #a6b9c7
+        margin-left: 15px
         &:first-child
           margin-left: 0
 
