--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/try_me.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/try_me.jade
@@ -30,10 +30,14 @@ v-accordion(multiple="").vAccordion--default
     v-pane-content
       div(ng-repeat="h in headers track by $index")
         div.try-me-line
-          div(data-tribe-singleselect, data-editable="true", data-placeholder="Header name", data-selected-option="h.name",
-              data-available-options="headerOptions", data-on-edit-mode-off="h.changed && h.changed()")
-          div(data-tribe-singleselect, data-editable="true", data-placeholder="Header value", data-selected-option="h.value"
-              data-available-options="h.$$proposals || []")
+          ui-select(ng-model="h.name", placeholder="Header name", on-select="onHeaderChange($item, h);", tagging, tagging-label="false", tagging-tokens="ENTER|,")
+            ui-select-match(placeholder="Header name") {{$select.selected}}
+            ui-select-choices(repeat="p in headerOptions | filter: $select.search track by $index")
+              div {{p}}
+          ui-select(ng-model="h.value", placeholder="Header value", tagging, tagging-label="false", tagging-tokens="ENTER|,")
+            ui-select-match(placeholder="Header value") {{$select.selected}}
+            ui-select-choices(repeat="p in (h.$$proposals || []) | filter: $select.search track by $index")
+              div {{p}}
           div
             div(ng-click="headers.splice($index, 1)")
               i.fa.fa-trash-o
