REG-128 + added variable

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable.sass
@@ -25,7 +25,7 @@ $width: 20px
       &.empty
         font-style: italic
         font-size: 12px
-        color: #a8a9aa !important
+        color: $app-placeholder-color !important
     > input
       display: none
       max-width: 100%
