--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_link.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_link.sass
@@ -14,7 +14,7 @@ i[data-tribe-editable-link], div[data-tribe-editable-link]
         font-style: italic
         font-size: 12px
         font-weight: 700 !important
-        color: #a8a9aa !important
+        color: $app-placeholder-color !important
       div.edit-trigger
         margin-left: 10px
         opacity: 0
