--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -12,7 +12,7 @@
         margin: 5px 0
         &.empty
           font-style: italic
-          color: #a8a9aa
+          color: $app-placeholder-color
       input
         margin: 5px 0
         border: 0
