--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_variables.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_variables.sass
@@ -13,6 +13,7 @@ $app-font-weight-h5: 400
 $app-font-size: $app-font-size-h5
 
 $app-input-border-color: #e5e6e7
+$app-placeholder-color: #a8a9aa
 
 $default-padding: 8px
 $app-disabled-button-color: #c0c0c0
