--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_md.sass
@@ -38,7 +38,7 @@ div[data-tribe-editable-md]
       flex-direction: column
       span
         font-style: italic
-        color: #a8a9aa !important
+        color: $app-placeholder-color !important
         font-weight: 600 !important
     div.dyn
       display: none
