--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_editable_option.sass
@@ -8,7 +8,7 @@ i[data-tribe-editable-option]
   span.empty
     font-style: italic !important
     font-size: 12px
-    color: #a8a9aa !important
+    color: $app-placeholder-color !important
     font-weight: 600 !important
   > div
     outline: none
