REG-128 + fixed colors

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_markdown.sass
@@ -121,7 +121,7 @@ div[data-tribe-markdown]
   div.preview > div.empty
     span
       font-style: italic
-      color: $app-input-border-color
+      color: $app-placeholder-color
   div.preview > div[x-ng-bind-html], div.editor-preview
     max-width: 100%
     @include code-style
