REG-360 make application details show the same labels in the diff panel as we do in the endpoint details page

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_history.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_history.sass
@@ -1,4 +1,5 @@
 @import "variables"
+@import "common_table"
 
 div[data-app-endpoints-details-history]
   margin-top: 20px
@@ -11,8 +12,8 @@ div[data-app-endpoints-details-history]
           padding: 10px 0
       td, th
         // checkbox
-        //&:first-of-type
-        //  width: 40px
+        &:first-of-type
+          width: 40px
         // history button
         &:last-of-type
           width: 30px
