--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details.sass
@@ -60,38 +60,39 @@ div[data-app-application-details]
         transform: translate(-10px, 0)
       > div
         transform: translate(-10px, 0)
-    h1
-      margin: 0 0 5px 0
-    h2, h3
-      text-transform: uppercase
-      margin: 15px 0
-    h1, h1 input, h1 span
-      font-size: 25px !important
-      font-weight: $app-font-weight-h1 !important
-    h2
-      font-size: 18px !important
-      font-weight: $app-font-weight-h2 !important
-    h3
-      font-size: 14px !important
-      font-weight: $app-font-weight-h3 !important
-    ul, li
-      list-style: none
-      margin: 0
-    ul
-      margin-left: 10px
-    a
-      text-decoration: none
-      span
-        &:first-child
-          text-transform: uppercase
-        &:last-child
-          font-style: italic
-      &:hover
+    > div:nth-of-type(1), > div:nth-of-type(2)
+      h1
+        margin: 0 0 5px 0
+      h2, h3
+        text-transform: uppercase
+        margin: 15px 0
+      h1, h1 input, h1 span
+        font-size: 25px !important
+        font-weight: $app-font-weight-h1 !important
+      h2
+        font-size: 18px !important
+        font-weight: $app-font-weight-h2 !important
+      h3
+        font-size: 14px !important
+        font-weight: $app-font-weight-h3 !important
+      ul, li
+        list-style: none
+        margin: 0
+      ul
+        margin-left: 10px
+      a
+        text-decoration: none
         span
-          color: $tomitribe-orange
-    ul.endpoint-info
-      li
-        margin-bottom: 5px
-        > a
+          &:first-child
+            text-transform: uppercase
+          &:last-child
+            font-style: italic
+        &:hover
           span
-            margin-right: 5px
+            color: $tomitribe-orange
+      ul.endpoint-info
+        li
+          margin-bottom: 5px
+          > a
+            span
+              margin-right: 5px
