--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details_history.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_application_details_history.sass
@@ -11,6 +11,9 @@ div[data-app-application-details-history]
         &:last-of-type
           padding: 10px 0
       td, th
+        // checkbox
+        &:first-of-type
+          width: 40px
         // history button
         &:last-of-type
           width: 30px
@@ -27,3 +30,8 @@ div[data-app-application-details-history]
         color: $color
       &:hover
         background-color: #f0f0f0 !important
+  h3.diff-title
+    margin: 0
+    padding: 5px 8px
+    text-align: center
+    font-size: 12px
