--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_text.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_text.sass
@@ -54,4 +54,4 @@
     border-color: $app-input-border-color
   span.empty
     font-style: italic
-    color: $app-placeholder-color
+    color: $app-placeholder-color !important
