--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -27,12 +27,12 @@ div[data-app-endpoints-details-header]
             flex-grow: 1
           > div
             input, span
-              color: $app-placeholder-color
+              color: #000000
         > div[data-tribe-singleselect]
           input, span
             text-transform: capitalize
             font-style: normal
-            color: $app-placeholder-color
+            color: #000000
             font-size: 25px !important
         div.value span, a, div[data-tribe-text] input, div[data-tribe-text] span
           font-size: 25px !important
