--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -3,7 +3,7 @@ div
   div
     div
       div(data-submenu="true", app-endpoints-details-toc-anchor="API Versions")
-        span API Versions
+        span API Version
         div(data-tribe-multiselect,
           data-on-edit-mode-on="onEditModeOn(uniqueId)",
           data-on-edit-mode-off="onEditModeOff(uniqueId)",
