--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_details_resource_information.jade
@@ -2,7 +2,7 @@ div
   h2(app-endpoints-details-toc-anchor="Resource Information") Resource Information
   div
     div
-      div(data-submenu="true", app-endpoints-details-toc-anchor="API Versions")
+      div(data-submenu="true", app-endpoints-details-toc-anchor="API Version")
         span API Version
         div(data-tribe-text,
             data-on-edit-mode-on="onEditModeOn(uniqueId)",
