--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_application_details.jade
@@ -6,6 +6,8 @@ div
           i.fa.fa-home
         i.fa.fa-chevron-right
         a(x-ng-if="applicationLink", x-ng-href="application/{{applicationName}}?version={{swagger.info.version}}") {{swagger.info.title}} {{swagger.info.version}}
+        i.fa.fa-chevron-right
+        span(x-ng-if="historyItem") Revision {{historyItem.revisionId}} by {{historyItem.username}} created on {{historyItem.timestamp | date:'medium'}}
       .buttons
         .save(x-ng-disabled="!swagger.info.title || !swagger.info.version",
                  x-ng-click="!swagger.info.title || !swagger.info.version || save()")
@@ -37,7 +39,7 @@ div
           h3 Endpoints
           ul.endpoint-info
             li(x-ng-repeat="endpoint in endpoints")
-              a(x-ng-href="endpoint/{{applicationName}}/{{endpoint.operation}}/{{endpoint.humanReadablePath}}?version={{swagger.info.version}}")
+              a(x-ng-href="endpoint/{{applicationName}}/{{endpoint.operation}}{{endpoint.path | pathencode}}?version={{swagger.info.version}}")
                 span {{endpoint.operation}}
                 span {{endpoint.path}}
                 span {{endpoint.summary}}
