REG-407 making mandatory fields visible in the application details and endpoint details pages

--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_app_endpoints_details_header.sass
@@ -38,6 +38,8 @@ div[data-app-endpoints-details-header]
           font-size: 25px !important
           font-weight: 600 !important
           margin-right: 5px
+          &.empty
+            margin-right: 0
           max-width: none !important
           &:last-of-type
             margin-right: 0
