--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/app.sass
@@ -42,12 +42,16 @@ a
     color: $tomitribe-orange
     text-decoration: underline
 
+span.mandatory
+  vertical-align: super !important
+  font-size: 10px !important
+  color: #ff0000 !important
+
 [x-ng-click], [ng-click]
   &:hover
     cursor: pointer
 
 .floating-menu
-  background-color: transparentize(#ffffff, 0.05)
   position: absolute
   z-index: 3000
   border: solid white 1px
