--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect.jade
@@ -6,7 +6,8 @@ div(tabindex=0)
         data-on-commit="onCommit()"
         data-on-change="onChange()"
         data-input-text="inputText",
-        data-placeholder="placeholder"
+        data-placeholder="placeholder",
+        data-mandatory="mandatory"
     )
     div(data-tribe-singleselect-available,
         data-active="optionsActivated",
