--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_selected.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/component_singleselect_selected.jade
@@ -3,5 +3,6 @@ div
     input(type="text", x-ng-keyup="keyEntered($event);", x-ng-model="inputText")
     span {{inputText}}
     span.empty(x-ng-if="!inputText") {{placeholder !== null &&  placeholder !== undefined ? placeholder : 'Empty'}}
+    span.mandatory(x-ng-if="!inputText && mandatory") *
   .edit-icon
     i.fa.fa-pencil
