--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_singleselect.sass
@@ -71,6 +71,7 @@ div.tribe-data-tribe-singleselect-available-body
     > div
       padding: 5px 8px
     .option
+      background-color: #ffffff
       &.selected, &:hover
         background-color: #f5f5f5
   .new-opt
