--- a/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_confirm_btn.sass
+++ b/tribestream-api-registry-webapp/src/main/static/assets/styles/_component_confirm_btn.sass
@@ -13,6 +13,8 @@ div[data-tribe-confirm-btn]
     flex-direction: column
     justify-content: center
     align-items: center
+    z-index: 1
+    cursor: default
     > div
       max-width: 600px
       background-color: #ffffff
