REG-412 Inconsistent title after category label selection

--- a/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_selected_filter.jade
+++ b/tribestream-api-registry-webapp/src/main/static/assets/templates/app_endpoints_selected_filter.jade
@@ -1,7 +1,7 @@
 div(x-ng-if="selectedApps.length || selectedCategories.length || selectedTags.length || selectedRoles.length")
   h1
     i.fa.fa-tag
-    span Selected tags
+    span Selected {{choose}}
     span ({{selectedApps.length + selectedCategories.length + selectedTags.length + selectedRoles.length}})
   div(data-app-endpoints-list-filter-entries, data-title="Applications", data-list="selectedApps", data-key="a")
   div(data-app-endpoints-list-filter-entries, data-title="Categories", data-list="selectedCategories", data-key="c")
